--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -414,19 +414,19 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td  >{{systemGenerated?.RecoveryAmountUpToEOMPD}}</td>
+                                    <td  >{{systemGenerated?.RecoveryAmountUpToEOMCD}}</td>
+                                    <td  >{{systemGenerated?.RecoveryAmountUpToEOMTotal}}</td>
+                                    <td  >{{systemGenerated?.RDuringMonthPD}}</td>
+                                    <td  >{{systemGenerated?.RDuringMonthCD}}</td>
+                                    <td  >{{systemGenerated?.RDuringMonthTotal}}</td>
+                                    <td  >{{systemGenerated?.RBalnceRecoverablePD}}</td>
+                                    <td  >{{systemGenerated?.RBalnceRecoverableCD}}</td>
+                                    <td  >{{systemGenerated?.RBalnceRecoverableTotal}}</td>
+                                    <td  >{{systemGenerated?.RDuringCorrespondingPD}}</td>
+                                    <td  >{{systemGenerated?.RDuringCorrespondingCD}}</td>
+                                    <td  >{{systemGenerated?.RDuringCorrespondingTotal}}</td>
+                                    <td  >{{systemGenerated?.RecIncreaseDecrease}}</td>
                                     <td>
                                         <ul>
                                             <li>Reschedulement</li>
