--- a/src/app/modules/tour-dairy/tour-diary-approval-bm/tour-diary-approval-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-bm/tour-diary-approval-bm.component.html
@@ -242,9 +242,9 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
-                                    <td class="border-r border-gray-400"></td>
+                                    <td class="border-r border-gray-400">{{systemGenerated?.RecoveryAmountUpToEOMPD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated?.RecoveryAmountUpToEOMCD}}</td>
+                                    <td class="border-r border-gray-400">{{systemGenerated?.RecoveryAmountUpToEOMTotal}}</td>
                                     <td class="border-r border-gray-400">{{systemGenerated?.RDuringMonthPD}}</td>
                                     <td class="border-r border-gray-400">{{systemGenerated?.RDuringMonthCD}}</td>
                                     <td class="border-r border-gray-400">{{systemGenerated?.RDuringMonthTotal}}</td>
