--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -380,17 +380,20 @@
                     <div class="row mt-2 mr-1">
                         <div class="col-lg-12 text-right">
                             <button (click)="saveTourDiary()" *ngIf="isUpdate==false && currentActivity.C && edit_mode"
-                                    class="ml-2 bg-green" color="primary" mat-raised-button type="button">
+                                    class="mr-2 bg-green" color="primary" mat-raised-button
+                                    type="button">
                                 <mat-icon class="mr-2">save</mat-icon>
-                                {{btnText}}</button>
-                            <button (click)="saveTourDiary()" *ngIf="isUpdate==true && currentActivity.U && edit_mode"
-                                    class="mr-2 bg-green" color="primary" mat-raised-button type="button">
+                                Save
+                            </button>
+                            <button (click)="saveTourDiary()" *ngIf="isUpdate==true && currentActivity.D && edit_mode"
+                                    class="mr-2 bg-green" color="primary" mat-raised-button
+                                    type="button">
                                 <mat-icon class="mr-2">save</mat-icon>
                                 Update
                             </button>
-
                             <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode" [disabled]="checkDisable" class="mr-2"
-                                    color="primary" mat-raised-button type="button">
+                                    color="primary" mat-raised-button
+                                    type="button">
                                 <mat-icon class="mr-2">check_circle</mat-icon>
                                 Submit
                             </button>
