--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -204,20 +204,22 @@
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
-                    <button (click)="saveTourDiary()" *ngIf="isUpdate==true && currentActivity.U" class="mr-2 bg-green"
-                            color="primary" mat-raised-button
+                    <button (click)="saveTourDiary()" *ngIf="isUpdate==true && currentActivity.D && edit_mode"
+                            class="mr-2 bg-green" color="primary" mat-raised-button
                             type="button">
                         <mat-icon class="mr-2">save</mat-icon>
                         Update
                     </button>
-                    <button (click)="changeStatus('','S')" *ngIf="isUpdate==true && currentActivity.U" class="mr-2" color="primary"
-                            mat-raised-button type="button">
+                    <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode" [disabled]="checkDisable" class="mr-2"
+                            color="primary" mat-raised-button
+                            type="button">
                         <mat-icon class="mr-2">check_circle</mat-icon>
                         Submit
                     </button>
                     <button (click)="onClearForm()"
-                            *ngIf="currentActivity.C"
-                            class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" mat-raised-button type="button">
+                            *ngIf="currentActivity.C && edit_mode"
+                            class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" mat-raised-button
+                            type="button">
                         <mat-icon class="mr-2"> clear_all</mat-icon>
                         Clear
                     </button>
