--- a/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
+++ b/src/app/modules/tour-plan/view-tour-tab/view-tour-tab.component.html
@@ -44,7 +44,7 @@
                         <th>Purpose</th>
                         <th>Remarks</th>
                         <th>Status</th>
-
+                        <th>Action</th>
                     </tr>
                     </thead>
                     <tbody>
